sqlite/src/bindings/sqlite3_bindings.rs

unsafe extern "C" {
    pub fn sqlite3_result_error(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_char,
        arg3: core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_error16(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_void,
        arg3: core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_error_toobig(arg1: *mut sqlite3_context);
}
unsafe extern "C" {
    pub fn sqlite3_result_error_nomem(arg1: *mut sqlite3_context);
}
unsafe extern "C" {
    pub fn sqlite3_result_error_code(arg1: *mut sqlite3_context, arg2: core::ffi::c_int);
}
unsafe extern "C" {
    pub fn sqlite3_result_int(arg1: *mut sqlite3_context, arg2: core::ffi::c_int);
}
unsafe extern "C" {
    pub fn sqlite3_result_int64(arg1: *mut sqlite3_context, arg2: sqlite3_int64);
}
unsafe extern "C" {
    pub fn sqlite3_result_null(arg1: *mut sqlite3_context);
}
unsafe extern "C" {
    pub fn sqlite3_result_text(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_char,
        arg3: core::ffi::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_text64(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_char,
        arg3: sqlite3_uint64,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
        encoding: core::ffi::c_uchar,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_text16(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_void,
        arg3: core::ffi::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_text16le(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_void,
        arg3: core::ffi::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_text16be(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_void,
        arg3: core::ffi::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_value(arg1: *mut sqlite3_context, arg2: *mut sqlite3_value);
}
unsafe extern "C" {
    pub fn sqlite3_result_pointer(
        arg1: *mut sqlite3_context,
        arg2: *mut core::ffi::c_void,
        arg3: *const core::ffi::c_char,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_zeroblob(arg1: *mut sqlite3_context, n: core::ffi::c_int);
}
unsafe extern "C" {
    pub fn sqlite3_result_zeroblob64(
        arg1: *mut sqlite3_context,
        n: sqlite3_uint64,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_result_subtype(arg1: *mut sqlite3_context, arg2: core::ffi::c_uint);
}
unsafe extern "C" {
    pub fn sqlite3_create_collation(
        arg1: *mut sqlite3,
        zName: *const core::ffi::c_char,
        eTextRep: core::ffi::c_int,
        pArg: *mut core::ffi::c_void,
        xCompare: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: core::ffi::c_int,
                arg3: *const core::ffi::c_void,
                arg4: core::ffi::c_int,
                arg5: *const core::ffi::c_void,
            ) -> core::ffi::c_int,
        >,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_collation_v2(
        arg1: *mut sqlite3,
        zName: *const core::ffi::c_char,
        eTextRep: core::ffi::c_int,
        pArg: *mut core::ffi::c_void,
        xCompare: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: core::ffi::c_int,
                arg3: *const core::ffi::c_void,
                arg4: core::ffi::c_int,
                arg5: *const core::ffi::c_void,
            ) -> core::ffi::c_int,
        >,
        xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_collation16(
        arg1: *mut sqlite3,
        zName: *const core::ffi::c_void,
        eTextRep: core::ffi::c_int,
        pArg: *mut core::ffi::c_void,
        xCompare: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: core::ffi::c_int,
                arg3: *const core::ffi::c_void,
                arg4: core::ffi::c_int,
                arg5: *const core::ffi::c_void,
            ) -> core::ffi::c_int,
        >,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_collation_needed(
        arg1: *mut sqlite3,
        arg2: *mut core::ffi::c_void,
        arg3: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: *mut sqlite3,
                eTextRep: core::ffi::c_int,
                arg3: *const core::ffi::c_char,
            ),
        >,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_collation_needed16(
        arg1: *mut sqlite3,
        arg2: *mut core::ffi::c_void,
        arg3: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: *mut sqlite3,
                eTextRep: core::ffi::c_int,
                arg3: *const core::ffi::c_void,
            ),
        >,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_sleep(arg1: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub static mut sqlite3_temp_directory: *mut core::ffi::c_char;
}
unsafe extern "C" {
    pub static mut sqlite3_data_directory: *mut core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_win32_set_directory(
        type_: core::ffi::c_ulong,
        zValue: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_win32_set_directory8(
        type_: core::ffi::c_ulong,
        zValue: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_win32_set_directory16(
        type_: core::ffi::c_ulong,
        zValue: *const core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_get_autocommit(arg1: *mut sqlite3) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_db_handle(arg1: *mut sqlite3_stmt) -> *mut sqlite3;
}
unsafe extern "C" {
    pub fn sqlite3_db_name(db: *mut sqlite3, N: core::ffi::c_int) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_db_filename(
        db: *mut sqlite3,
        zDbName: *const core::ffi::c_char,
    ) -> sqlite3_filename;
}
unsafe extern "C" {
    pub fn sqlite3_db_readonly(
        db: *mut sqlite3,
        zDbName: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_txn_state(
        arg1: *mut sqlite3,
        zSchema: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_next_stmt(pDb: *mut sqlite3, pStmt: *mut sqlite3_stmt) -> *mut sqlite3_stmt;
}
unsafe extern "C" {
    pub fn sqlite3_commit_hook(
        arg1: *mut sqlite3,
        arg2: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> core::ffi::c_int,
        >,
        arg3: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_rollback_hook(
        arg1: *mut sqlite3,
        arg2: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
        arg3: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_autovacuum_pages(
        db: *mut sqlite3,
        arg1: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: *const core::ffi::c_char,
                arg3: core::ffi::c_uint,
                arg4: core::ffi::c_uint,
                arg5: core::ffi::c_uint,
            ) -> core::ffi::c_uint,
        >,
        arg2: *mut core::ffi::c_void,
        arg3: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_update_hook(
        arg1: *mut sqlite3,
        arg2: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: core::ffi::c_int,
                arg3: *const core::ffi::c_char,
                arg4: *const core::ffi::c_char,
                arg5: sqlite3_int64,
            ),
        >,
        arg3: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_enable_shared_cache(arg1: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_release_memory(arg1: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_db_release_memory(arg1: *mut sqlite3) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_soft_heap_limit64(N: sqlite3_int64) -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_hard_heap_limit64(N: sqlite3_int64) -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_soft_heap_limit(N: core::ffi::c_int);
}
unsafe extern "C" {
    pub fn sqlite3_table_column_metadata(
        db: *mut sqlite3,
        zDbName: *const core::ffi::c_char,
        zTableName: *const core::ffi::c_char,
        zColumnName: *const core::ffi::c_char,
        pzDataType: *mut *const core::ffi::c_char,
        pzCollSeq: *mut *const core::ffi::c_char,
        pNotNull: *mut core::ffi::c_int,
        pPrimaryKey: *mut core::ffi::c_int,
        pAutoinc: *mut core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_load_extension(
        db: *mut sqlite3,
        zFile: *const core::ffi::c_char,
        zProc: *const core::ffi::c_char,
        pzErrMsg: *mut *mut core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_enable_load_extension(
        db: *mut sqlite3,
        onoff: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_auto_extension(
        xEntryPoint: ::core::option::Option<unsafe extern "C" fn()>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_cancel_auto_extension(
        xEntryPoint: ::core::option::Option<unsafe extern "C" fn()>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_reset_auto_extension();
}
